Add some net code. Refactor snake code. Add view with color mapper.